Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Scooby-Doo y el fantasma de la bruja -->
+<li>
+  <a href="../Peliculas/movie1.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/aVS9CqFgfkypqLoljg1VDHSvMmB.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Scooby-Doo y el fantasma de la bruja 1999</span>
+    <span class="hidden">La pandilla viaja a Nueva Inglaterra al Gran Festival de la Vendimia, invitados por Ben, un famoso escritor de novelas de terror. Todo va bien hasta que descubren que el lugar está embrujado por Sarah, un mujer que perteneció a la familia de Ben en el pasado. Hay que revelar el misterio de si Sarah era una mujer de buen corazón o una bruja...</span>
+  </a>
+</li>
+<!--FIN-->
 
  </ul>
 
