Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Scooby-Doo y el fantasma de la bruja -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- De la nada: ¡Scooby-Doo! Conoce a Coraje, el Perro Cobarde -->
+<li>
+  <a href="../Peliculas/movie2.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/g9cyiDTw5SQhbI7SRDjBUMr14kV.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">De la nada: ¡Scooby-Doo! Conoce a Coraje, el Perro Cobarde 2021</span>
+    <span class="hidden">La comedia empieza cuando Scooby-Doo, el perro detective favorito, se une por primera vez a Coraje, el perro cobarde. La dupla canina huele algo extraño en el medio de Ningún Lugar, Kansas, hogar de Coraje y sus dueños, Justo y Muriel. Enseguida este misterioso descubrimiento los lleva al encuentro de una cigarra monstruosa gigante y su extraño ejército de bichos voladores. Fred, Vilma, Dafne y Shaggy saben bien que un matamoscas no bastará, y necesitarán la ayuda del dúo perruno para resolver el misterio. ¿Podrán Scooby y Coraje vencer sus miedos y derrotar al ejército de insectos antes de que infeste al mundo? ¡Te reto a que no estires la pata del susto!</span>
+  </a>
+</li>
+<!--FIN--><!-- Scooby-Doo y el fantasma de la bruja -->
 <li>
   <a href="../Peliculas/movie1.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
