--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- De la nada: ¡Scooby-Doo! Conoce a Coraje, el Perro Cobarde -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rockstar: DUKI desde el fin del mundo -->
+<li>
+  <a href="../Peliculas/movie3.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/dZO8yK3cHO9A2Uo4ePrlUMJZQwj.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Rockstar: DUKI desde el fin del mundo 2025</span>
+    <span class="hidden">Una mirada única al universo íntimo del artista argentino que transformó su historia personal en un fenómeno cultural de alcance global. En un momento bisagra de su carrera y su identidad artística, Mauro se encuentra en pleno cambio de piel y se enfrenta a sus demonios internos para llevar adelante la historia de DUKI y del movimiento que representa. ¿Quién es Mauro y quién es DUKI en definitiva? Con imágenes inéditas, este documental sigue el recorrido de un referente que personifica el espíritu de un fenómeno colectivo de la música urbana.</span>
+  </a>
+</li>
+<!--FIN--><!-- De la nada: ¡Scooby-Doo! Conoce a Coraje, el Perro Cobarde -->
 <li>
   <a href="../Peliculas/movie2.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
