--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- De la nada: ¡Scooby-Doo! Conoce a Coraje, el Perro Cobarde -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Megamente -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie4.html">
+    <img src="https://image.tmdb.org/t/p/original/i8YhVqSx6QlqIAHJ60vEZzpiCfe.jpg" alt="Megamente" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Megamente</div>
+  <div class="text-xs text-white/70">2010</div>
+</article><!-- De la nada: ¡Scooby-Doo! Conoce a Coraje, el Perro Cobarde -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie2.html">
     <img src="https://image.tmdb.org/t/p/original/g9cyiDTw5SQhbI7SRDjBUMr14kV.jpg" alt="De la nada: ¡Scooby-Doo! Conoce a Coraje, el Perro Cobarde" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
