--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Rockstar: DUKI desde el fin del mundo -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Megamente -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie4.html">
+    <img src="https://image.tmdb.org/t/p/original/i8YhVqSx6QlqIAHJ60vEZzpiCfe.jpg" alt="Megamente" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Megamente</div>
+  <div class="text-xs text-white/70">2010</div>
+</article><!-- Rockstar: DUKI desde el fin del mundo -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie3.html">
     <img src="https://image.tmdb.org/t/p/original/dZO8yK3cHO9A2Uo4ePrlUMJZQwj.jpg" alt="Rockstar: DUKI desde el fin del mundo" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
