Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rockstar: DUKI desde el fin del mundo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Megamente -->
+<li>
+  <a href="../Peliculas/movie4.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/i8YhVqSx6QlqIAHJ60vEZzpiCfe.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Megamente 2010</span>
+    <span class="hidden">Megamente es el supervillano más brillante que el mundo haya conocido. Y el que menos éxito tiene. Durante años, ha estado intentando conquistar Metro City por todos los medios posibles. Cada intento constituye un fracaso, por culpa de Metro Man, un héroe invencible hasta que Megamente consigue matarlo...</span>
+  </a>
+</li>
+<!--FIN--><!-- Rockstar: DUKI desde el fin del mundo -->
 <li>
   <a href="../Peliculas/movie3.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
