Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Megamente -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Megamente contra el sindicato de la perdicion -->
+<li>
+  <a href="../Peliculas/movie5.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jf0VOTuKY2UUqK8NtXrxhtY9CVP.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Megamente contra el sindicato de la perdición 2024</span>
+    <span class="hidden">El antiguo equipo de villanos de Megamente, El sindicato de Doom, han regresado.  Nuestro héroe cabezon azul recién coronado, ahora debe mantener apariencias malvadas hasta que pueda reunir a sus amigos para evitar que sus antiguos compañeros malvados lancen Metro City a la Luna.</span>
+  </a>
+</li>
+<!--FIN--><!-- Megamente -->
 <li>
   <a href="../Peliculas/movie4.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
