--- a/Plataforma/cartoonnetworks/index.html
+++ b/Plataforma/cartoonnetworks/index.html
@@ -199,7 +199,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un show mas -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- De la nada: ¡Scooby-Doo! Conoce a Coraje, el Perro Cobarde -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie2.html">
+    <img src="https://image.tmdb.org/t/p/original/g9cyiDTw5SQhbI7SRDjBUMr14kV.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">De la nada: ¡Scooby-Doo! Conoce a Coraje, el Perro Cobarde</div>
+  <div class="text-xs text-white/70">2021</div>
+</article><!-- Un show mas -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../..//Series/serie74.html">
     <img src="https://image.tmdb.org/t/p/original/6xea7V4d2xayrlBKOtMZ4wlV6wZ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
