--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Megamente -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Invencible: Un nino fuera de serie -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie6.html">
+    <img src="https://image.tmdb.org/t/p/original/epEorIcbWjuLqd4dgRWYffpazIR.jpg" alt="Invencible: Un niño fuera de serie" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Invencible: Un niño fuera de serie</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Megamente -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie4.html">
     <img src="https://image.tmdb.org/t/p/original/i8YhVqSx6QlqIAHJ60vEZzpiCfe.jpg" alt="Megamente" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
