Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Megamente contra el sindicato de la perdicion -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Invencible: Un nino fuera de serie -->
+<li>
+  <a href="../Peliculas/movie6.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/epEorIcbWjuLqd4dgRWYffpazIR.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Invencible: Un niño fuera de serie 2025</span>
+    <span class="hidden">Un niño con autismo padece además una rara enfermedad de los huesos. Pero lo que le hace verdaderamente único es su visión del mundo alegre, divertida y llena de vida, que transforma y une a todos los que le rodean.</span>
+  </a>
+</li>
+<!--FIN--><!-- Megamente contra el sindicato de la perdicion -->
 <li>
   <a href="../Peliculas/movie5.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
