Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,13 +31,22 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- A traves de mi ventana -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- A traves del mar -->
+<li>
+  <a href="../Peliculas/movie8.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/hisRiTK0zCP1sXtlCSrmFRVOVlz.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">A través del mar 2023</span>
+    <span class="hidden">En A través del mar, Ares se ha ido a estudiar a Estocolmo, y él y Raquel están manteniendo una relación a distancia, lo que supone un mayor desafío de lo que ellos habían imaginado. Cuando llega el verano y se reencuentran, el periodo de separación y las nuevas personas que han conocido en ese tiempo harán que lo que creían seguro empiece a tambalearse.</span>
+  </a>
+</li>
+<!--FIN--><!-- A traves de mi ventana -->
 <li>
   <a href="../Peliculas/movie7.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
   src="https://image.tmdb.org/t/p/original/3F5MkMadQOWiZNVaNuOuw6UaK7a.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">A través de mi ventana 2022</span>
-    <span class="hidden">Raquel lleva toda la vida loca por Ares, su atractivo y misterioso vecino. Lo observa sin ser vista y es que, muy a su pesar, no han intercambiado ni una palabra. Raquel tiene muy claro su objetivo: conseguir que Ares se enamore de ella. Pero ella no es una niña inocente y no está dispuesta a perderlo todo por el camino, y mucho menos a sí misma…</span>
+    <span class="hidden">Raquel lleva toda la vida loca por Ares, su atractivo y misterioso vecino. Lo observa sin ser vista y es que, muy a su pesar, no han intercambiado ni una palabra. Raquel tiene muy claro su objetivo: conseguir que Ares se enamore de ella. Pero ella no es una niña inocente y no está dispuesta a perderlo todo por el camino, y mucho menos a sí misma⬦</span>
   </a>
 </li>
 <!--FIN--><!-- Invencible: Un nino fuera de serie -->
