Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- A traves del mar -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- A traves de tu mirada -->
+<li>
+  <a href="../Peliculas/movie9.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/1RxPBKMpHlcm5PORiPo6LHUV2ft.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">A través de tu mirada 2024</span>
+    <span class="hidden">Raquel y Ares tienen una relación a distancia. Finalmente se reencuentran durante el verano en los paisajes de la Costa Brava con sus amigos. Raquel y Ares comienzan a cuestionarse si su relación podrá resistir el paso del tiempo. Secuela de "A través del mar" (2023) y tercera película sobre Ares y Raquel.</span>
+  </a>
+</li>
+<!--FIN--><!-- A traves del mar -->
 <li>
   <a href="../Peliculas/movie8.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
