Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Yo Antes de Ti -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Nezha: El renacer de un dios -->
+<li>
+  <a href="../Peliculas/movie11.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/bPj2YRLOnYtY7dQCZl3hHef9PZA.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Nezha: El renacer de un dios 2021</span>
+    <span class="hidden">La historia tiene lugar tres mil años después de "Nezha nao hai". Nezha nace de nuevo ¿Qué desafíos enfrentará en esta vida? Un nuevo superhéroe está naciendo en silencio...</span>
+  </a>
+</li>
+<!--FIN--><!-- Yo Antes de Ti -->
 <li>
   <a href="../Peliculas/movie10.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
