Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Nezha: El renacer de un dios -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El maravillosamente extrano mundo de Gumball -->
+<li>
+  <a href="../Series/serie110.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zjon4kGt6L6mYu04fKVr0u07Fte.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El maravillosamente extraño mundo de Gumball 2025</span>
+    <span class="hidden">Bienvenido de nuevo a Elmore, donde las leyes de la realidad son una broma y la vida familiar es todo menos ordinaria. Ya sea luchando contra un imperio de comida rápida malvado, enfrentándose a una IA sensible enamorada de su mamá, o tratando de detener a Banana Joe de usar pantalones, Gumball Watterson arrastra a su hermano Darwin, a su hermana Anais y al resto de la ciudad de Elmore en esta aventura. Con historias aún más locas, giros más grandes y un humor surrealista, ¡el programa es tan asombroso que tuvieron que renombrarlo!</span>
+  </a>
+</li>
+<!--FIN--><!-- Nezha: El renacer de un dios -->
 <li>
   <a href="../Peliculas/movie11.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
