--- a/Plataforma/k-drama/index.html
+++ b/Plataforma/k-drama/index.html
@@ -170,7 +170,17 @@ document.addEventListener("DOMContentLoaded", () => {
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
   <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mantis -->
+    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El genio y los deseos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie111.html">
+    <img src="https://image.tmdb.org/t/p/original/57lwxja44bDvaOGbLrUfINMe5Vh.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El genio y los deseos</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Mantis -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula1000.html">
     <img src="https://image.tmdb.org/t/p/original/v1vs4RJyqzckfxPjyWN5zN1dEgH.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
