--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El maravillosamente extrano mundo de Gumball -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El genio y los deseos -->
+<li>
+  <a href="../Series/serie111.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/57lwxja44bDvaOGbLrUfINMe5Vh.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El genio y los deseos 2025</span>
+    <span class="hidden">Mil años después, un extravagante genio regresa para conceder los deseos de una mujer sin emociones. ¿Logrará él con su magia llenar de amor y asombro el mundo de ella?</span>
+  </a>
+</li>
+<!--FIN--><!-- El maravillosamente extrano mundo de Gumball -->
 <li>
   <a href="../Series/serie110.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
