Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El genio y los deseos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ne Zha 2: El Renacer del Alma -->
+<li>
+  <a href="../Peliculas/movie12.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/rSBlnopTGL6aGpD2gTG1Bfqb2Om.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ne Zha 2: El Renacer del Alma 2025</span>
+    <span class="hidden">Después de la catástrofe, aunque las almas de Nezha y Aobing fueron salvadas, sus cuerpos pronto serían destrozados. Taiyi Zhenren planeaba usar el loto de siete colores para reconstruir sus cuerpos.</span>
+  </a>
+</li>
+<!--FIN--><!-- El genio y los deseos -->
 <li>
   <a href="../Series/serie111.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
