Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ne Zha 2: El Renacer del Alma -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Nezha: Corriendo por la vida -->
+<li>
+  <a href="../Peliculas/movie13.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/rDT8vGSQ8uijR97USelHCuVzCpf.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Nezha: Corriendo por la vida 2021</span>
+    <span class="hidden">El equipo LIONS, que alguna vez fue el dominante, fue disminuyendo gradualmente después de la muerte del líder del equipo, Lao Shen. No dispuestos a retirarse, Li Yi Fei y su nueva compañera, la primera mujer conductora en la historia de la liga, Lu Li li no se llevaban bien, y los dos no se rindieron entre sí, lo que empeoró la situación del equipo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ne Zha 2: El Renacer del Alma -->
 <li>
   <a href="../Peliculas/movie12.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
