Crear/Actualizar Categorias/animacion/index.html

--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Ne Zha 2: El Renacer del Alma -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Megamente y El Boton de la Perdicion -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie14.html">
+    <img src="https://image.tmdb.org/t/p/original/v1gbUeGh0TPfGK5VbqHZ9trVCjt.jpg" alt="Megamente y El Botón de la Perdición" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Megamente y El Botón de la Perdición</div>
+  <div class="text-xs text-white/70">2011</div>
+</article><!-- Ne Zha 2: El Renacer del Alma -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie12.html">
     <img src="https://image.tmdb.org/t/p/original/rSBlnopTGL6aGpD2gTG1Bfqb2Om.jpg" alt="Ne Zha 2: El Renacer del Alma" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
