--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El maravillosamente extrano mundo de Gumball -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Megamente y El Boton de la Perdicion -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie14.html">
+    <img src="https://image.tmdb.org/t/p/original/v1gbUeGh0TPfGK5VbqHZ9trVCjt.jpg" alt="Megamente y El Botón de la Perdición" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Megamente y El Botón de la Perdición</div>
+  <div class="text-xs text-white/70">2011</div>
+</article><!-- El maravillosamente extrano mundo de Gumball -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie110.html">
     <img src="https://image.tmdb.org/t/p/original/zjon4kGt6L6mYu04fKVr0u07Fte.jpg" alt="El maravillosamente extraño mundo de Gumball" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
