--- a/Plataforma/dreamworks/index.html
+++ b/Plataforma/dreamworks/index.html
@@ -159,7 +159,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Megamente contra el sindicato de la perdicion -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Megamente y El Boton de la Perdicion -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie14.html">
+    <img src="https://image.tmdb.org/t/p/original/v1gbUeGh0TPfGK5VbqHZ9trVCjt.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Megamente y El Botón de la Perdición</div>
+  <div class="text-xs text-white/70">2011</div>
+</article><!-- Megamente contra el sindicato de la perdicion -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie5.html">
     <img src="https://image.tmdb.org/t/p/original/jf0VOTuKY2UUqK8NtXrxhtY9CVP.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
