Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Nezha: Corriendo por la vida -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Megamente y El Boton de la Perdicion -->
+<li>
+  <a href="../Peliculas/movie14.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/v1gbUeGh0TPfGK5VbqHZ9trVCjt.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Megamente y El Botón de la Perdición 2011</span>
+    <span class="hidden">Para su primer día en el trabajo como los nuevos protectores de Metro City, Megamente y Cervil están vendiendo los dispositivos de su guarida malvada. Pero cuando un "botón" aparentemente inofensivo desata el gigantesco robot MEGA-MEGAmente, el dúo tendrá que recurrir a sus viejos trucos para restablecer el orden.</span>
+  </a>
+</li>
+<!--FIN--><!-- Nezha: Corriendo por la vida -->
 <li>
   <a href="../Peliculas/movie13.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
