Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Megamente y El Boton de la Perdicion -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ne Zha -->
+<li>
+  <a href="../Peliculas/movie15.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8TpbaMAjrYm2iFB3LCTcVInwhdS.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ne Zha 2019</span>
+    <span class="hidden">Nezha, nacido de una perla celestial con poderes únicos, pronto se encontrará exiliado, odiado y temido por la gente que cree en una profecía que indica que él traerá la destrucción del mundo. Llegará el momento en el que deberá decidir entre el bien y el mal con el propósito de romper los grilletes del destino y convertirse en un héroe. Película inspirada muy libremente en "Fengshen Yanyi" ("La Investidura de los Dioses"), una de las grandes novelas chinas escritas en la Dinastía Ming cuya autoría se atribuye a Xu Zhonglin o Lu Xixing.</span>
+  </a>
+</li>
+<!--FIN--><!-- Megamente y El Boton de la Perdicion -->
 <li>
   <a href="../Peliculas/movie14.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
